/*
 * Copyright 2020-2021 NXP
 *
 * SPDX-License-Identifier: Apache-2.0
 */

/** @file
 *
 * test_agent_dispatcher.h:  *Unit tests for file nxp_iot_agent_dispatcher*
 */

#ifndef NXP_IOT_AGENT_TEST_AGENT_DISPATCHER_
#define NXP_IOT_AGENT_TEST_AGENT_DISPATCHER_

/* *****************************************************************************************************************
 *   Includes
 * ***************************************************************************************************************** */
#include <unity_fixture.h>

/* *****************************************************************************************************************
 * MACROS/Defines
 * ***************************************************************************************************************** */

/* *****************************************************************************************************************
 * Types/Structure Declarations
 * ***************************************************************************************************************** */

/* *****************************************************************************************************************
 *   Extern Variables
 * ***************************************************************************************************************** */

/* *****************************************************************************************************************
 *   Function Prototypes
 * ***************************************************************************************************************** */
TEST_GROUP(AgentDispatcher);
TEST_SETUP(AgentDispatcher);
TEST_TEAR_DOWN(AgentDispatcher);

#endif /* NXP_IOT_AGENT_TEST_AGENT_UTILS_ */
